--- a/app/src/debug/res/values/non_L10n.xml
+++ b/app/src/debug/res/values/non_L10n.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name" translatable="false">Wolvic VR Browser(Dev)</string>
+    <string name="app_name" translatable="false">Aptero Wolvic VR Browser(Dev)</string>
 </resources>
