--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -73,16 +73,17 @@
                 android:id="@+id/surveyLink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:autoLink="all"
                 android:clickable="false"
                 android:fontFamily="sans-serif"
                 android:gravity="center"
                 android:text="@string/settings_send_your_feedback"
+                android:textColor="@color/azure"
                 android:textColorHighlight="@android:color/transparent"
                 android:textColorLink="@color/azure"
-                android:textColor="@color/azure"
-                android:autoLink="all"
+                android:textSize="@dimen/text_smaller_size"
                 android:textStyle="bold"
-                android:textSize="@dimen/text_smaller_size" />
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/buildText"
@@ -150,6 +151,7 @@
                         <com.igalia.wolvic.ui.views.HoneycombButton
                             android:id="@+id/developerOptionsButton"
                             style="?attr/honeycombButtonStyle"
+                            android:visibility="invisible"
                             app:honeycombButtonIcon="@drawable/ic_settings_developeroptions"
                             app:honeycombButtonText="@string/settings_developer_options"
                             app:honeycombButtonTextSize="@dimen/settings_main_button_text_width" />
@@ -157,10 +159,11 @@
                         <com.igalia.wolvic.ui.views.HoneycombButton
                             android:id="@+id/fxaButton"
                             style="?attr/honeycombButtonStyle"
+                            android:visibility="invisible"
                             app:honeycombButtonIcon="@drawable/ic_icon_settings_account"
+                            app:honeycombButtonIconHover="false"
                             app:honeycombButtonText="@string/settings_fxa_account_sign_in"
-                            app:honeycombButtonTextSize="@dimen/settings_main_button_text_width"
-                            app:honeycombButtonIconHover="false"/>
+                            app:honeycombButtonTextSize="@dimen/settings_main_button_text_width" />
 
                     </LinearLayout>
 
@@ -192,6 +195,7 @@
                         <com.igalia.wolvic.ui.views.HoneycombButton
                             android:id="@+id/helpButton"
                             style="?attr/honeycombButtonStyle"
+                            android:visibility="invisible"
                             app:honeycombButtonIcon="@drawable/ic_settings_help"
                             app:honeycombButtonText="@string/settings_help"
                             app:honeycombButtonTextSize="@dimen/settings_main_button_text_width" />
@@ -199,22 +203,25 @@
                         <RelativeLayout
                             android:layout_width="136dp"
                             android:layout_height="136dp"
-                            android:layout_marginEnd="-10dp">
+                            android:layout_marginEnd="-10dp"
+                            android:visibility="invisible">
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:layout_width="6dp"
+                                android:layout_height="6dp"
+                                android:layout_alignParentTop="true"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginTop="48dp"
+                                android:layout_marginEnd="58dp"
+                                android:background="@drawable/downloads_badge"
+                                app:visibleGone="@{settingsmodel.isWhatsNewVisible}" />
+
                             <com.igalia.wolvic.ui.views.HoneycombButton
                                 android:id="@+id/whatsNewButton"
                                 style="?attr/honeycombButtonStyle"
                                 app:honeycombButtonIcon="@drawable/ic_whats_new"
                                 app:honeycombButtonText="@string/settings_whats_new"
                                 app:honeycombButtonTextSize="@dimen/settings_main_button_text_width" />
-                            <androidx.appcompat.widget.AppCompatTextView
-                                android:layout_width="6dp"
-                                android:layout_height="6dp"
-                                android:layout_marginTop="48dp"
-                                android:layout_marginEnd="58dp"
-                                android:layout_alignParentTop="true"
-                                android:layout_alignParentEnd="true"
-                                android:background="@drawable/downloads_badge"
-                                app:visibleGone="@{settingsmodel.isWhatsNewVisible}"/>
                         </RelativeLayout>
                     </LinearLayout>
                 </RelativeLayout>
