--- a/app/src/main/res/layout/tray.xml
+++ b/app/src/main/res/layout/tray.xml
@@ -153,75 +153,90 @@
             <com.igalia.wolvic.ui.views.UIButton
                 android:id="@+id/addwindowButton"
                 style="@style/trayButtonStartTheme"
-                android:tooltipText="@string/new_window_tooltip"
-                app:tooltipDensity="@dimen/tray_tooltip_density"
-                app:tooltipPosition="bottom"
-                app:tooltipLayout="@layout/tooltip_tray"
                 android:src="@drawable/ic_icon_tray_newwindow"
-                app:visibleGone="@{!traymodel.isMaxWindows}"/>
+                android:tooltipText="@string/new_window_tooltip"
+                android:visibility="invisible"
+                app:tooltipDensity="@dimen/tray_tooltip_density"
+                app:tooltipLayout="@layout/tooltip_tray"
+                app:tooltipPosition="bottom"
+                tool:visibility="invisible" />
 
             <com.igalia.wolvic.ui.views.UIButton
                 android:id="@+id/tabsButton"
                 style="@style/trayButtonMiddleTheme"
-                android:tooltipText="@string/tabs_tray_tooltip"
-                app:tooltipDensity="@dimen/tray_tooltip_density"
-                app:tooltipPosition="bottom"
-                app:tooltipLayout="@layout/tooltip_tray"
                 android:src="@drawable/ic_icon_tray_tabs"
-                app:regularModeBackground="@{traymodel.isMaxWindows ? @drawable/tray_background_unchecked_start : @drawable/tray_background_unchecked_middle}"
+                android:tooltipText="@string/tabs_tray_tooltip"
+                android:visibility="invisible"
+                app:activeModeBackground="@{traymodel.isMaxWindows ? @drawable/tray_background_checked_start : @drawable/tray_background_checked_middle}"
                 app:privateModeBackground="@{traymodel.isMaxWindows ? @drawable/tray_background_start_private : @drawable/tray_background_middle_private}"
-                app:activeModeBackground="@{traymodel.isMaxWindows ? @drawable/tray_background_checked_start : @drawable/tray_background_checked_middle}"/>
+                app:regularModeBackground="@{traymodel.isMaxWindows ? @drawable/tray_background_unchecked_start : @drawable/tray_background_unchecked_middle}"
+                app:tooltipDensity="@dimen/tray_tooltip_density"
+                app:tooltipLayout="@layout/tooltip_tray"
+                app:tooltipPosition="bottom"
+                tool:visibility="invisible" />
 
             <com.igalia.wolvic.ui.views.UIButton
                 android:id="@+id/privateButton"
                 style="@style/trayButtonMiddleTheme"
-                android:tooltipText="@{viewmodel.isPrivateSession? @string/private_browsing_exit_tooltip : @string/private_browsing_enter_tooltip}"
-                app:tooltipDensity="@dimen/tray_tooltip_density"
-                app:tooltipPosition="bottom"
-                app:tooltipLayout="@layout/tooltip_tray"
                 android:src="@{viewmodel.isPrivateSession ? @drawable/ic_icon_tray_private_browsing_on_v2 : @drawable/ic_icon_tray_private_browsing_v2}"
-                app:privateMode="@{viewmodel.isPrivateSession}"/>
+                android:tooltipText="@{viewmodel.isPrivateSession? @string/private_browsing_exit_tooltip : @string/private_browsing_enter_tooltip}"
+                android:visibility="invisible"
+                app:privateMode="@{viewmodel.isPrivateSession}"
+                app:tooltipDensity="@dimen/tray_tooltip_density"
+                app:tooltipLayout="@layout/tooltip_tray"
+                app:tooltipPosition="bottom"
+                tool:visibility="invisible" />
 
             <RelativeLayout
                 android:layout_width="40dp"
                 android:layout_height="40dp">
+
                 <com.igalia.wolvic.ui.views.UIButton
                     android:id="@+id/libraryButton"
                     style="@style/trayButtonMiddleTheme"
-                    android:tooltipText="@{viewmodel.isLibraryVisible ? @string/close_library_tooltip : @string/open_library_tooltip}"
-                    app:tooltipDensity="@dimen/tray_tooltip_density"
-                    app:tooltipPosition="bottom"
-                    app:tooltipLayout="@layout/tooltip_tray"
                     android:src="@drawable/ic_icon_library"
+                    android:tooltipText="@{viewmodel.isLibraryVisible ? @string/close_library_tooltip : @string/open_library_tooltip}"
+                    android:visibility="invisible"
+                    app:activeMode="@{viewmodel.isLibraryVisible}"
                     app:clipDrawable="@drawable/ic_icon_library_clip"
-                    app:activeMode="@{viewmodel.isLibraryVisible}"/>
+                    app:tooltipDensity="@dimen/tray_tooltip_density"
+                    app:tooltipLayout="@layout/tooltip_tray"
+                    app:tooltipPosition="bottom"
+                    tool:visibility="invisible" />
+
                 <androidx.appcompat.widget.AppCompatTextView
+                    visibleGone="@{traymodel.downloadsNumber > 0}"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
-                    android:layout_margin="2dp"
-                    android:padding="1dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:background="@drawable/downloads_badge"
                     android:gravity="center"
+                    android:padding="1dp"
+                    android:text="@{(traymodel.downloadsNumber &lt; 100) ? String.valueOf(traymodel.downloadsNumber) : @string/ellipsis}"
                     android:textAlignment="gravity"
                     android:textStyle="bold"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="4sp"
                     app:autoSizeMaxTextSize="10sp"
+                    app:autoSizeMinTextSize="4sp"
                     app:autoSizeStepGranularity="2sp"
-                    android:background="@drawable/downloads_badge"
-                    android:text="@{(traymodel.downloadsNumber &lt; 100) ? String.valueOf(traymodel.downloadsNumber) : @string/ellipsis}"
-                    visibleGone="@{traymodel.downloadsNumber > 0}"/>
+                    app:autoSizeTextType="uniform"
+                    tool:visibility="invisible" />
             </RelativeLayout>
 
             <com.igalia.wolvic.ui.views.UIButton
                 android:id="@+id/settingsButton"
                 style="@style/trayButtonEndTheme"
+                android:src="@drawable/ic_icon_tray_settings_v3"
                 android:tooltipText="@string/settings_tooltip"
+                android:visibility="visible"
                 app:tooltipDensity="@dimen/tray_tooltip_density"
-                app:tooltipPosition="bottom"
                 app:tooltipLayout="@layout/tooltip_tray"
-                android:src="@drawable/ic_icon_tray_settings_v3"/>
+                app:tooltipPosition="bottom"
+                tool:visibility="invisible" />
         </LinearLayout>
 
     </RelativeLayout>
