--- a/app/src/main/res/values/non_L10n.xml
+++ b/app/src/main/res/values/non_L10n.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name" translatable="false">Wolvic VR Browser</string>
+    <string name="app_name" translatable="false">Aptero Wolvic VR Browser</string>
     <string name="bug_report_url" translatable="false">mzl.la/fxr</string>
     <!-- You can test a local file using: "resource://android/assets/webvr/index.html" -->
-    <string name="homepage_url" translatable="false">https://wolvic.com/start</string>
+    <string name="homepage_url" translatable="false">https://alphahub.aptero.co/yUXD7A2/lightweight-empty-room</string>
+    <!--<string name="homepage_url" translatable="false">https://meet.aptero.co/link</string>-->
     <string name="settings_key_homepage" translatable="false">settings_homepage</string>
     <string name="settings_key_crash" translatable="false">settings_crash</string>
     <string name="settings_key_locale" translatable="false">settings_locale</string>
